force-app/main/default/objects/RentConsignmentFeeRiseAndFallNum__c/RentConsignmentFeeRiseAndFallNum__c.object-meta.xml
<CustomObject>
    <label>家賃委託料増減件数</label>
    <nameField>
        <displayFormat>No-{0000}</displayFormat>
        <label>家賃委託料増減件数名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>