force-app/main/default/objects/RentConsignmentFeeRiseAndFallNum__c/fields/AdditionBillingAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>AdditionBillingAmountTotal__c</fullName>
    <label>追加請求額合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>