force-app/main/default/objects/RentConsignmentFeeRiseAndFallNum__c/fields/AdditionNum__c.field-meta.xml
<CustomField>
    <fullName>AdditionNum__c</fullName>
    <label>追加件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>