force-app/main/default/objects/RentConsignmentFeeRiseAndFallNum__c/fields/CancelNum__c.field-meta.xml
<CustomField>
    <fullName>CancelNum__c</fullName>
    <label>解約件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>