force-app/main/default/objects/RentConsignmentFeeRiseAndFallNum__c/fields/CategoryChangeAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>CategoryChangeAmountTotal__c</fullName>
    <label>区分変更金額合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>