force-app/main/default/objects/RentConsignmentFeeRiseAndFallNum__c/fields/CategoryChangeNum__c.field-meta.xml
<CustomField>
    <fullName>CategoryChangeNum__c</fullName>
    <label>区分変更件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>