force-app/main/default/objects/RentConsignmentFeeRiseAndFallNum__c/fields/IndividualBillNo__c.field-meta.xml
<CustomField>
    <fullName>IndividualBillNo__c</fullName>
    <label>個別請求書№</label>
    <length>255</length>
    <type>Text</type>
</CustomField>