force-app/main/default/objects/RentConsignmentFeeRiseAndFallNum__c/fields/LastMonthBillingAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>LastMonthBillingAmountTotal__c</fullName>
    <label>前月請求額合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>