force-app/main/default/objects/RentConsignmentFeeRiseAndFallNum__c/fields/LastMonthNum__c.field-meta.xml
<CustomField>
    <fullName>LastMonthNum__c</fullName>
    <label>前月件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>