force-app/main/default/objects/RentConsignmentFeeRiseAndFallNum__c/fields/ListViewLoginUser__c.field-meta.xml
<CustomField>
    <fullName>ListViewLoginUser__c</fullName>
    <formula>Id =  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>リストビュー_ログインユーザ</label>
    <type>Checkbox</type>
</CustomField>