force-app/main/default/objects/RentConsignmentFeeRiseAndFallNum__c/fields/NewBillingAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>NewBillingAmountTotal__c</fullName>
    <label>新規請求額合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>