force-app/main/default/objects/RentConsignmentFeeRiseAndFallNum__c/fields/PriceCutAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>PriceCutAmountTotal__c</fullName>
    <label>値下金額合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>