force-app/main/default/objects/RentConsignmentFeeRiseAndFallNum__c/fields/PriceCutNum__c.field-meta.xml
<CustomField>
    <fullName>PriceCutNum__c</fullName>
    <label>値下件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>