force-app/main/default/objects/RentConsignmentFeeRiseAndFallNum__c/fields/RemittanceResumeNum__c.field-meta.xml
<CustomField>
    <fullName>RemittanceResumeNum__c</fullName>
    <label>送金再開件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>