force-app/main/default/objects/RentConsignmentFeeRiseAndFallNum__c/fields/RemittanceStopAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>RemittanceStopAmountTotal__c</fullName>
    <label>送金停止金額合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>