force-app/main/default/objects/RentConsignmentFeeRiseAndFallNum__c/fields/RentConsignmentRiseAndFallNumId__c.field-meta.xml
<CustomField>
    <fullName>RentConsignmentRiseAndFallNumId__c</fullName>
    <externalId>true</externalId>
    <label>家賃委託料増減件数ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>