force-app/main/default/objects/RentConsignmentFeeRiseAndFallNum__c/listViews/RentConsignmentFeeRiseAndFallNum.listView-meta.xml
<ListView>
    <fullName>RentConsignmentFeeRiseAndFallNum</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>家賃委託料増減件数</label>
</ListView>